[gd_scene load_steps=3 format=3 uid="uid://0j7d73v8y531"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_7tp6c"]
[ext_resource type="Texture2D" uid="uid://b4e0v7sawyev" path="res://Resources/Main Menu.png" id="2_8atwg"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_7tp6c")

[node name="MainMenu" type="Sprite2D" parent="."]
position = Vector2(575.5, 323.5)
scale = Vector2(2.0193, 0.916431)
texture = ExtResource("2_8atwg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 567.0
offset_top = 319.0
offset_right = 607.0
offset_bottom = 359.0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Difficulty" type="VBoxContainer" parent="."]
visible = false
offset_left = 567.0
offset_top = 319.0
offset_right = 607.0
offset_bottom = 359.0

[node name="Easy" type="Button" parent="Difficulty"]
layout_mode = 2
text = "Easy"

[node name="Medium" type="Button" parent="Difficulty"]
layout_mode = 2
text = "Medium"

[node name="Hard" type="Button" parent="Difficulty"]
layout_mode = 2
text = "Hard"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Difficulty/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="Difficulty/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="Difficulty/Hard" to="." method="_on_hard_pressed"]
